--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,10 +57,15 @@ h2 {
     font-size: 35px;
 }
 
+h6 {
+    font-family: poppinsmedium;
+    font-size: 16px;
+}
+
 
 /** ==== Banner ====**/
 
-h1.title-white {
+.title-white {
     color: #fff;
 }
 
@@ -78,10 +83,11 @@ section.banner {
 }
 
 p.banner-txt {
+    position: relative;
     padding-right: 35%;
     padding-top: 25px;
     margin-bottom: 50px;
-    margin-left: 50px;
+    padding-left: 50px;
     font-family: open_sansregular;
     color: #fff;
 }
@@ -109,44 +115,286 @@ button.purchase {
 
 /** ==== Products Small ====**/
 
-h1.title-black {
+section.products-small {
+    padding: 80px 0px;
+}
+
+.title-black {
     color: #000000;
 }
 
 div.new::before {
+    font-family: poppinsmedium;
     content: 'NEW';
-    width: 20%;
+    width: 15%;
     background-color: #ffe9e2;
     position: absolute;
     right: 0;
+    font-size: 10px;
+    letter-spacing: 2px;
+    padding: 0 10px;
 }
 
 div.sale::before {
+    font-family: poppinsmedium;
     content: '15%';
-    width: 20%;
+    width: 15%;
     background-color: #ffe9e2;
     position: absolute;
     right: 0;
+    font-size: 10px;
+    letter-spacing: 2px;
+    padding: 0 14px;
+}
+
+.new-title {
+    position: relative;
+}
+
+.new-title::after {
+    content: '';
+    border: 1px solid #000000;
+    position: absolute;
+    left: 0;
+    bottom: -20px;
+    width: 30px;
+}
+
+section.products-small .col-lg-3 {
+    padding-top: 40px;
+}
+
+section.products-small p {
+    font-family: poppinsmedium;
+}
+
+section.products-small span {
+    color: #959494;
+    font-family: open_sansregular;
 }
 
 /** ==== Products Large ====**/
 
-.products-large-left,
-.products-large-right {
-    position: relative;
+section.products-large {
+    padding: 60px 0px;
 }
 
 .products-large-left img,
 .products-large-right img {
     float: right;
+    padding-bottom: 40px;
+}
+
+.products-large-left {
+    background-color: #ece8e5;
+    padding: 40px;
+    width: 100%;
+    height: 100%;
+    animation-duration: 1s;
+}
+
+.products-large-right {
+    background-color: #5c595d;
+    padding: 40px;
+    width: 100%;
+    height: 100%;
+    animation-duration: 1s;
+}
+
+.products-large-left span,
+.products-large-right span {
+    position: absolute;
+    bottom: 50px;
+    left: 60px;
+    color: black;
+    font-family: open_sansregular;
+    font-size: 30px;
+}
+
+.products-large-left p,
+.products-large-right p {
+    font-size: 12px;
+    font-family: poppinsregular;
+    letter-spacing: 2px;
+}
+
+.products-large-left h2,
+.products-large-right h2 {
+    font-size: 20px;
+    font-family: poppinsmedium;
+    letter-spacing: 2px;
+}
+
+.product-large-txt-wrap {
+    position: absolute;
+}
+
+.products-large-left sup,
+.products-large-right sup {
+    font-size: 16px;
+    padding-right: 15%;
+    top: -1.0em;
+}
+
+.products-large-right p,
+.products-large-right h2,
+.products-large-right span,
+.products-large-right sup {
+    color: #fff;
+}
+
+
+/** ==== Testemonials ====**/
+
+section.testemonials {
+    padding: 80px 0px;
+    height: 350px;
+}
+
+section.testemonials .container {
+    position: relative;
+}
+
+section.testemonials p {
+    padding: 25px 20%;
+    font-family: open_sansregular;
+    color: #959494;
+    margin: 0;
+}
+
+section.testemonials span {
+    font-family: poppinsregular;
+    letter-spacing: 2px;
+    font-size: 12px;
+}
+
+#arrow-left {
+    z-index: 2;
+    width: 50px;
+    position: absolute;
+    left: 7%;
+    top: 60px;
+    color: #211f1f;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg)
+}
+
+#arrow-right {
+    z-index: 2;
+    width: 50px;
+    position: absolute;
+    right: 7%;
+    top: 60px;
+    color: #211f1f;
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+
+img.testemonial-img {
+    width: 100px;
+    border-radius: 50%;
+}
+
+span.testemonial-quotations-wrap {
+    position: relative;
+}
+
+span.testemonial-quotations-wrap i {
+    position: absolute;
+    font-size: 60px;
+    color: #ececec;
+    z-index: -1;
+    top: -45px;
+    left: -46px;
+}
+
+.testemonials-one,
+.testemonials-two {
+    left: 0;
+    right: 0;
+    position: absolute;
+}
+
+.show {
+    display: block;
+}
+
+.no-show {
+    display: none;
+}
+
+.opacity-zero {
+    opacity: 0;
+}
+
+.opacity-full {
+    opacity: 1;
 }
 
 /** ==== Blog ====**/
 
+section.blog {
+    padding-top: 80px;
+    padding-bottom: 120px;
+}
 div.blog-box {
-    text-align: left;
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 8% 10%;
+    padding: 5%;
+    text-align: left;
     background-color: #fff;
-    margin: 5%;
+}
+
+/** ==== Footer ====**/
+
+section.footer {
+    background-color: #211f1f;
+    padding-bottom: 60px;
+}
+
+section.footer a>p,
+section.footer p {
+    font-family: open_sansregular;
+    font-size: 12px;
+    color: #b0afaf;
+    margin-bottom: 8px;
+}
+
+section.footer a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
+div.footer-col-wrap i {
+    color: #fff;
+    margin-top: 15px;
+    font-size: 12px;
+    padding-right: 8%;
+}
+
+div.footer-col-wrap {
+    padding: 60px 0;
+}
+
+div.footer-col-wrap h6{
+    margin-bottom: 15px;
+}
+
+.footer-cards i {
+    padding-left: 3%;
+    color: #fff;
+}
+
+.footer-copyright {
+    font-size: 10px;
+    letter-spacing: 2px;
 }
