--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,15 +70,13 @@ h6 {
 }
 
 section.banner {
-    /* width: 100%;
-    height: auto;
-    background: url('../img/banner.jpg') top center / 100% 100%; */
     background-image: url(../img/banner.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: auto;
+    padding: 100px 0px 180px 0px;
     overflow: auto;
 }
 
@@ -105,12 +103,24 @@ p.banner-txt::before {
 
 button.purchase {
     height: 100%;
-    padding: 5px 40px;
+    padding: 16px 40px;
     color: #000000;
     font-family: poppinsregular;
     letter-spacing: 3px;
     border-radius: 0;
     background-color: #ffe9e2;
+    font-size: 11px;
+    border: none;
+}
+
+button.purchase:hover {
+    transition: 0.2s;
+    color: #fff;
+    background-color: #000000;
+}
+
+button.purchase:focus {
+    outline: none;
 }
 
 /** ==== Products Small ====**/
@@ -171,6 +181,37 @@ section.products-small p {
 section.products-small span {
     color: #959494;
     font-family: open_sansregular;
+}
+
+.products-hover {
+    padding-top: 35%;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 290px;
+    opacity: 0;
+}
+
+.products-hover:hover {
+    transition: 0.2s;
+    opacity: 0.8;
+    background-color: #fff;
+}
+
+.products-hover-icons-wrap {
+    display: inline-flex;
+}
+
+.products-hover-icons-wrap i{
+    padding: 15px;
+    border: 1px solid #000000;
+}
+
+.products-hover-icons-wrap i:hover {
+    cursor: pointer;
+    transition: 0.4s;
+    color: #fff;
+    background-color: #000000;
 }
 
 /** ==== Products Large ====**/
@@ -343,7 +384,9 @@ section.blog {
     padding-top: 80px;
     padding-bottom: 120px;
 }
+
 div.blog-box {
+    transition: 0.4s;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -352,6 +395,40 @@ div.blog-box {
     padding: 5%;
     text-align: left;
     background-color: #fff;
+}
+
+div.blog-box:hover {
+    transition: 0.4s;
+    transform: scale(1.1);
+}
+
+div.blog-box p.blog-category {
+    font-size: 11px;
+    font-family: poppinsregular;
+    letter-spacing: 2px;
+}
+
+div.blog-box h2 {
+    position: relative;
+    font-size: 15px;
+    font-family: poppinsmedium;
+}
+
+div.blog-box h2::after {
+    content: '';
+    border: 1px solid #b2b2b2;
+    position: absolute;
+    left: 0;
+    bottom: -15px;
+    width: 50px;
+}
+
+div.blog-box p.blog-author {
+    font-family: open_sansregular;
+    font-size: 14px;
+    color: #b2b2b2;
+    padding-top: 20px;
+    margin: 0;
 }
 
 /** ==== Footer ====**/
@@ -371,7 +448,11 @@ section.footer p {
 
 section.footer a:hover {
     color: #fff;
-    text-decoration: underline;
+    text-decoration: none;
+}
+
+section.footer a>p:hover {
+    color: #fff;
 }
 
 div.footer-col-wrap i {
@@ -397,4 +478,60 @@ div.footer-col-wrap h6{
 .footer-copyright {
     font-size: 10px;
     letter-spacing: 2px;
+}
+
+/** ==== Media Queries ====**/
+
+@media screen and (max-width: 1200px) {
+    .products-hover {
+        height: 210px
+    }
+
+    .products-large-right {
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .products-hover {
+        height: 325px;
+        padding-top: 40%;
+    }
+
+    #arrow-right {
+        right: 0;
+    }
+
+    #arrow-left {
+        left: 0;
+    }
+
+    section.blog .col-lg-4 {
+        padding-bottom: 30px;
+    }
+
+    div.blog-box {
+        margin: 8% 14%;
+    }
+
+    p.banner-txt {
+        padding-right: 0;
+    }
+    
+}
+
+@media screen and (max-width: 768px) {
+    .products-hover {
+        height: 240px;
+        padding-top: 35%;
+    }
+    
+}
+
+@media screen and (max-width: 576px) {
+    .products-hover {
+        height: 81%;
+        padding-top: 40%;
+    }
+    
 }
